--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <label for="contrasena">Contraseña</label>
       <input type="password" placeholder="Contraseña" id="contrasena" />
       <br /><br />
-      <label for="correo">Correo Electronico</label>
+      <label for="correo">Correo Electrónico</label>
       <input type="email" placeholder="ejemplo@email.com" id="correo" />
       <br /><br />
       <label for="colorfav">Color Favorito</label>
@@ -25,7 +25,7 @@
       <input type="tel" placeholder="xxxx-xxxx" pattern="[0-9]{4}-[0-9]{4}" />
       <br /><br />
       <label for="edad">Edad</label>
-      <input type="number" min="1" max="100" />
+      <input type="number" min="0" max="100" />
       <br /><br /><br />
       <button type="submit">Enviar</button>
       <button type="reset">Limpiar</button>
